[project]
name = "harvestguard"
version = "0.1.0"
description = "Open-source cryptographic inventory and quantum risk scanner for enterprise resilience."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Timothy Serewicz" }]
requires-python = ">=3.10"

[project.scripts]
harvestguard = "harvestguard:main"

# NOTE: This project isn't packaged for PyPI distribution yet. This file
# centralizes dev-tooling config and exposes a local editable-install CLI entry
# point for development use.

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
